# esp32-radio

./: .gitignore  .gitmodules  CMakeLists.txt  sdkconfig
components/BSP/: CMakeLists.txt
components/BSP/IIC/: iic.c  iic.h
components/IIC/: CMakeLists.txt  iic.c
components/rda5807/: CMakeLists.txt  rda5807.c  rda5807.h
main/: CMakeLists.txt  main.c
